; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/x11/extr_x11_main.c_onkey.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/x11/extr_x11_main.c_onkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.timeval = type { i32, i64 }

@advance_scheduled = common dso_local global i64 0, align 8
@justcopied = common dso_local global i64 0, align 8
@gapp = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@tmo_at = common dso_local global i32 0, align 4
@showingpage = common dso_local global i32 0, align 4
@showingmessage = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @onkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @onkey(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.timeval, align 8
  %6 = alloca %struct.timeval, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i64 0, i64* @advance_scheduled, align 8
  %7 = load i64, i64* @justcopied, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  store i64 0, i64* @justcopied, align 8
  %10 = call i32 @winrepaint(%struct.TYPE_4__* @gapp)
  br label %11

11:                                               ; preds = %9, %2
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @gapp, i32 0, i32 0), align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %23, label %14

14:                                               ; preds = %11
  %15 = load i32, i32* %3, align 4
  %16 = icmp eq i32 %15, 80
  br i1 %16, label %17, label %23

17:                                               ; preds = %14
  %18 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 0
  store i32 2, i32* %18, align 8
  %19 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 1
  store i64 0, i64* %19, align 8
  %20 = call i32 @gettimeofday(%struct.timeval* %5, i32* null)
  %21 = call i32 @timeradd(%struct.timeval* %5, %struct.timeval* %6, i32* @tmo_at)
  store i32 1, i32* @showingpage, align 4
  %22 = call i32 @winrepaint(%struct.TYPE_4__* @gapp)
  br label %30

23:                                               ; preds = %14, %11
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @pdfapp_onkey(%struct.TYPE_4__* @gapp, i32 %24, i32 %25)
  %27 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @gapp, i32 0, i32 0), align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i32 0, i32* @showingpage, align 4
  store i64 0, i64* @showingmessage, align 8
  br label %30

30:                                               ; preds = %17, %29, %23
  ret void
}

declare dso_local i32 @winrepaint(%struct.TYPE_4__*) #1

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1

declare dso_local i32 @timeradd(%struct.timeval*, %struct.timeval*, i32*) #1

declare dso_local i32 @pdfapp_onkey(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
